--- a/index.html
+++ b/index.html
@@ -10,5 +10,87 @@
     />
     <title>Our-school</title>
   </head>
-  <body class="quicksand"></body>
+  <body class="quicksand">
+    <header>
+      <div class="header">
+        <div class="logo">
+          <img src="assets/logo.png" alt="My-logo" />
+          <p>SCHOOL</p>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#" class="orange">Home</a></li>
+            <li><a href="#" class="sky-blue">About</a></li>
+            <li><a href="#" class="see">Facilities</a></li>
+            <li><a href="#" class="sky">Admission</a></li>
+            <li><a href="#" class="contact">contact </a></li>
+          </ul>
+        </div>
+        <div class="none"><i class="fa-solid fa-bars"></i></div>
+      </div>
+      <span class="none"> <hr /></span>
+    </header>
+    <main>
+      <section class="banner-section">
+        <div class="banner">
+          <div class="banner_text">
+            <h1>
+              <span class="orange">Empowering</span>
+              <br />students from small <br />
+              age
+              <span class="sky">towards vision</span>
+            </h1>
+            <p>
+              With the courage, Confidence, Creativity and Compassion to make
+              <br />
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+            <button class="Banner_btn">Enroll Now</button>
+          </div>
+          <div class="banner_img">
+            <img src="assets/hero-kids.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="Standard_Curriculum">
+        <h1>Standard Curriculum</h1>
+        <div class="Curriculum_cards">
+          <div class="curriculum_card">
+            <img src="assets/kinder.png" alt="dribble" />
+            <h3>Kinder (3-6) Years</h3>
+            <p>
+              Cum sociis natoque penatibus et magnis <br />
+              dis parturient montes, nascetur ridiculus <br />
+              mu sdis parturient
+            </p>
+            <a href="#" class="ReadMOre1">Read More</a>
+          </div>
+          <div class="curriculum_card card2">
+            <img src="assets/kinder.png" alt="dribble" />
+            <h3>Kinder (3-6) Years</h3>
+            <p>
+              Cum sociis natoque penatibus et magnis <br />
+              dis parturient montes, nascetur ridiculus <br />
+              mu sdis parturient
+            </p>
+            <a href="#" class="ReadMOre2">Read More</a>
+          </div>
+          <div class="curriculum_card cards3">
+            <img src="assets/kinder.png" alt="dribble" />
+            <h3>Kinder (3-6) Years</h3>
+            <p>
+              Cum sociis natoque penatibus et magnis <br />
+              dis parturient montes, nascetur ridiculus <br />
+              mu sdis parturient
+            </p>
+            <a href="#" class="ReadMOre3">Read More</a>
+          </div>
+        </div>
+        <div class="button-container">
+          <button class="circle-button">&lt;</button>
+          <button class="circle-button">&gt;</button>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
