add a hard section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,59 @@
           <button class="circle-button">&gt;</button>
         </div>
       </section>
+      <section class="our_stories">
+        <h1>our stories</h1>
+        <div class="cards-conteiner">
+          <div class="our_img">
+            <img src="assets/story-1.png" alt="Our-school-img" />
+            <h1 class="Our-school-img_text">
+              A fun toddler coloring training<br />
+              on classroom
+            </h1>
+            <p class="Our-school-img_text_p">
+              Beautiful branding for changes by Never Now in Australia. <br />
+              changes is a platform for open discussion in an inclusive and
+              <br />
+              collaborative environment, providing the...
+            </p>
+            <a href="#">September 10,2020</a>
+          </div>
+          <div class="our-img-conteiner">
+            <div class="our_story_img">
+              <img src="assets/story-2.png" alt="" />
+              <h3>
+                Find out if a school fits the <br />
+                family’s needs
+              </h3>
+              <a href="#">September 10, 2019</a>
+            </div>
+            <div class="our_story_img">
+              <img src="assets/story-3.png" alt="" />
+              <h3>
+                Summer math & literacy <br />
+                centres for kids
+              </h3>
+              <a href="#">September 10, 2019</a>
+            </div>
+            <div class="our_story_img">
+              <img src="assets/story-4.png" alt="" />
+              <h3>
+                Classroom management <br />
+                techniques for new tutors
+              </h3>
+              <a href="#" class="img4">September 10, 2019</a>
+            </div>
+            <div class="our_story_img">
+              <img src="assets/story-5.png" alt="" />
+              <h3>
+                Find out if a school fits the <br />
+                family’s needs
+              </h3>
+              <a href="#" class="img5">September 10, 2019</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
