--- a/index.html
+++ b/index.html
@@ -143,7 +143,44 @@
             </div>
           </div>
         </div>
+        <button class="our_stories-btn">view all</button>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer-container">
+        <!-- Left Section -->
+        <div class="footer-logo">
+          <img src="assets/logo.png" alt="Kids Education Logo" />
+          <h3>Kids Education</h3>
+          <p>
+            Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon
+            <br />
+            Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+          </p>
+        </div>
+
+        <!-- Center Section -->
+        <div class="footer-links">
+          <h3>About School</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Facilities</a></li>
+            <li><a href="#">Admission</a></li>
+          </ul>
+        </div>
+
+        <!-- Right Section -->
+        <div class="footer-social">
+          <h3>Keep In Touch</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-dribbble"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-google-plus"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
