--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>Our-school</title>
   </head>
   <body class="quicksand">
+    <marquee
+      behavior="scroll"
+      direction="left"
+      style="
+        height: 50px;
+        background-color: #f0f0f0;
+        color: #333;
+        line-height: 50px;
+        font-size: 18px;
+      "
+    >
+      Welcome to programing Hero! Admissions for 2025 are now open. Contact us
+      for more details.
+    </marquee>
     <header>
       <div class="header">
         <div class="logo">
@@ -67,7 +81,7 @@
           </div>
           <div class="curriculum_card card2">
             <img src="assets/kinder.png" alt="dribble" />
-            <h3>Kinder (3-6) Years</h3>
+            <h3>Elementary School</h3>
             <p>
               Cum sociis natoque penatibus et magnis <br />
               dis parturient montes, nascetur ridiculus <br />
@@ -77,7 +91,7 @@
           </div>
           <div class="curriculum_card cards3">
             <img src="assets/kinder.png" alt="dribble" />
-            <h3>Kinder (3-6) Years</h3>
+            <h3>Middle (10-16) Years</h3>
             <p>
               Cum sociis natoque penatibus et magnis <br />
               dis parturient montes, nascetur ridiculus <br />
